# well_exps

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yaml
datasets/: README.md
datasets/MHD_256/: MHD_256.yaml  stats.yaml  visualization_MHD_256.ipynb
datasets/MHD_64/: MHD_64.yaml  stats.yaml  visualization_MHD_64.ipynb
datasets/acoustic_scattering_discontinuous/: README.md  acoustic_scattering_discontinuous.yaml  stats.yaml  visualization_acoustic_scattering_discontinuous.ipynb
datasets/acoustic_scattering_inclusions/: README.md  acoustic_scattering_inclusions.yaml  stats.yaml  visualization_acoustic_scattering_inclusions.ipynb
datasets/acoustic_scattering_maze/: README.md  acoustic_scattering_maze.yaml  stats.yaml  visualization_acoustic_scattering_maze.ipynb
datasets/active_matter/: stats.yaml  visualization_active_matter.ipynb
datasets/convective_envelope_rsg/: README.md  convective_envelope_rsg.yaml  stats.yaml  visualization_convective_envelope_rsg.ipynb
datasets/euler_multi_quadrants_openBC/: euler_multi_quadrants_openBC.yaml  stats.yaml  visualization_euler_multi_quadrants_openBC.ipynb
datasets/euler_multi_quadrants_periodicBC/: euler_multi_quadrants_periodicBC.yaml  stats.yaml  visualization_euler_multi_quadrants_periodicBC.ipynb
datasets/gray_scott_reaction_diffusion/: README.md  gray_scott_reaction_diffusion.yaml  stats.yaml  visualization_gray_scott_reaction_diffusion.ipynb
datasets/helmholtz_staircase/: helmholtz_staircase.yaml  stats.yaml  visualization_helmholtz_staircase.ipynb
datasets/planetswe/: README.md  planetswe.yaml  stats.yaml  visualization_planetswe.ipynb
datasets/post_neutron_star_merger/: README.md  post_neutron_star_merger.yaml  simulation_parameters.json  stats.yaml  visualization_post_neutron_star_merger.ipynb
datasets/rayleigh_benard/: stats.yaml  (+1 more)
docs/: api.md  benchmarks.md  data_format.md  datasets_overview.md  index.md
scripts/: README.md  check_thewell_data.py  check_thewell_data.sh  check_thewell_formatting.py  compute_statistics.py  create_all_miniwell.sh  create_gif.py  create_miniwell.py  generate_metadata.py  plot_velocity.py  plot_velocity.sh  remove_trajectory.py
tests/: test_augmentation.py  test_dataset.py  test_download.py  test_interface.py  test_metric.py  test_miniwell.py  test_models.py
the_well/: __init__.py
(+163 files in other folders)
